tests/compile-fail/intrinsics/div-by-zero.stderr
error: Undefined Behavior: dividing by zero
  --> $DIR/div-by-zero.rs:7:18
   |
LL |         let _n = unchecked_div(1i64, 0); //~ERROR dividing by zero
   |                  ^^^^^^^^^^^^^^^^^^^^^^ dividing by zero
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/div-by-zero.rs:7:18

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

